[package]
name = "nimiq-blockchain-interface"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "Generic blockchain structures"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
futures = { package = "futures-util", version = "0.3" }
log = { package = "tracing", version = "0.1", features = ["log"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }

nimiq-block = { path = "../primitives/block" }
nimiq-database-value = { path = "../database/database-value" }
nimiq-hash = { path = "../hash" }
nimiq-primitives = { path = "../primitives", features = ["coin", "key-nibbles", "policy"] }
nimiq-serde = { path = "../serde" }
nimiq-transaction = { path = "../primitives/transaction" }
