[package]
name = "nimiq-blockchain-interface"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Generic blockchain structures"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
log = { workspace = true }
parking_lot = "0.12"
serde = "1.0"
thiserror = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }

nimiq-account = { workspace = true, features = [] }
nimiq-block = { workspace = true }
nimiq-collections = { workspace = true }
nimiq-database-value = { workspace = true }
nimiq-database-value-derive = { workspace = true }
nimiq-hash = { workspace = true }
nimiq-primitives = { workspace = true, features = ["coin", "key-nibbles", "policy"] }
nimiq-serde = { workspace = true }
nimiq-transaction = { workspace = true }
nimiq-vrf = { workspace = true }
