[package]
name = "nimiq-blockchain-proxy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Persistent block storage for Nimiq's Albatross implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
parking_lot = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { package = "futures-util", version = "0.3" }

nimiq-block = { path = "../primitives/block" }
nimiq-blockchain = { path = "../blockchain", optional = true }
nimiq-blockchain-interface = { path = "../blockchain-interface" }
nimiq-light-blockchain = { path = "../light-blockchain" }
nimiq-hash = { path = "../hash" }
nimiq-primitives = { path = "../primitives" }
nimiq-transaction = { path = "../primitives/transaction" }

[features]
full = ["nimiq-blockchain"]
default = ["full"]