[package]
name = "nimiq-blockchain-proxy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Persistent block storage for Nimiq's Albatross implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
parking_lot = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }

nimiq-block = { workspace = true }
nimiq-blockchain = { workspace = true, optional = true }
nimiq-blockchain-interface = { workspace = true }
nimiq-hash = { workspace = true }
nimiq-light-blockchain = { workspace = true }
nimiq-primitives = { workspace = true }
nimiq-transaction = { workspace = true }

[features]
full = ["nimiq-blockchain"]
default = ["full"]
