[package]
name = "nimiq-blockchain"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "Persistent block storage for Nimiq's Albatross implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
thiserror = "1.0"
hex = "0.4"
log = { package = "tracing", version = "0.1", features = ["log"] }
parking_lot = { git = "https://github.com/styppo/parking_lot.git" }
rand = "0.8"

beserial = { path = "../beserial" }
beserial_derive = { path = "../beserial/beserial_derive" }
nimiq-account = { path = "../primitives/account" }
nimiq-block = { path = "../primitives/block" }
nimiq-bls = { path = "../bls", features = ["beserial"] }
nimiq-collections = { path = "../collections" }
nimiq-database = { path = "../database" }
nimiq-genesis = { path = "../genesis" }
nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys" }
nimiq-mmr = { path = "../primitives/mmr" }
nimiq-primitives = { path = "../primitives" }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-trie = { path = "../primitives/trie" }
nimiq-utils = { path = "../utils", features = ["observer", "unique-ptr", "iterators", "time", "math"] }
nimiq-vrf = { path = "../vrf" }

[dev-dependencies]
atomic = "0.5"

nimiq-block-production = { path = "../block-production", features = ["test-utils"] }
nimiq-nano-primitives = { path= "../nano-primitives" }
nimiq-test-log = { path = "../test-log" }
# This adds a circular dev-dependency which is fine but breaks VS code rust-analyzer.
# See https://github.com/rust-analyzer/rust-analyzer/issues/2414
nimiq-test-utils = { path= "../test-utils" }

[features]
metrics = []
