[package]
name = "nimiq-blockchain"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "Persistent block storage for Nimiq's Albatross implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
futures = { package = "futures-util", version = "0.3" }
hex = "0.4"
log = { package = "tracing", version = "0.1", features = ["log"] }
parking_lot = "0.12"
prometheus-client = { version = "0.19.0", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.29", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

nimiq-account = { path = "../primitives/account" }
nimiq-block = { path = "../primitives/block" }
nimiq-blockchain-interface = { path = "../blockchain-interface" }
nimiq-bls = { path = "../bls", features = ["serde-derive"] }
nimiq-collections = { path = "../collections" }
nimiq-database = { path = "../database" }
nimiq-database-value = { path = "../database/database-value" }
nimiq-genesis = { path = "../genesis" }
nimiq-hash = { path = "../hash" }
nimiq-keys = { path = "../keys" }
nimiq-mmr = { path = "../primitives/mmr" }
nimiq-primitives = { path = "../primitives" }
nimiq-serde = { path = "../serde" }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-utils = { path = "../utils", features = ["math", "time"] }
nimiq-vrf = { path = "../vrf" }
nimiq-zkp = { path = "../zkp" }

[dev-dependencies]
nimiq-block-production = { path = "../block-production", features = ["test-utils"] }
nimiq-test-log = { path = "../test-log" }
nimiq-transaction-builder = { path = "../transaction-builder" }
# This adds a circular dev-dependency which is fine but breaks VS code rust-analyzer.
# See https://github.com/rust-analyzer/rust-analyzer/issues/14167
nimiq-test-utils = { path = "../test-utils" }
nimiq-zkp-primitives = { path = "../zkp-primitives" }

[features]
metrics = ["prometheus-client"]
