[package]
name = "nimiq-bls"
version = "0.1.0"
authors = ["Jack Grigg <str4d@i2pmail.org>", "The Nimiq Core Development Team <info@nimiq.com>"]
description = "BLS signatures"
license = "Apache-2.0"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
edition = "2021"

[dependencies]
blake2 = "0.10"
blake2-rfc = "0.2"
byteorder = "1.3.4"
hex = "0.4"
log = { package = "tracing", version = "0.1", features = ["log"] }
parking_lot = { version = "0.12.1", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = "0.5"
thiserror = "1.0"

ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-mnt4-753 = "0.4"
ark-mnt6-753 = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["prf"] }
ark-serialize = "0.4"

nimiq-hash = { path = "../hash" }
nimiq-serde = { path = "../serde", optional = true }
nimiq-utils = { path = "../utils", features = ["key-rng"] }

[dev-dependencies]
nimiq-test-log = { path = "../test-log" }
nimiq-test-utils = { path = "../test-utils" }

[features]
cache = ["lazy"]
default = ["lazy", "serde-derive"]
lazy = ["parking_lot"]
serde-derive = ["nimiq-serde", "serde"]
