[package]
name = "nimiq-bls"
version.workspace = true
authors = ["Jack Grigg <str4d@i2pmail.org>", "The Nimiq Core Development Team <info@nimiq.com>"]
description = "BLS signatures"
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
blake2-rfc = "0.2"
byteorder = "1.5.0"
hex = "0.4"
log = { package = "tracing", version = "0.1", features = ["log"] }
parking_lot = { version = "0.12.1", optional = true }
rand = "0.8"
serde = { version = "1.0", optional = true }
serde-big-array = { version = "0.5", optional = true }
thiserror = "1.0"

ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-mnt4-753 = "0.4"
ark-mnt6-753 = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["prf"] }
ark-serialize = "0.4"

nimiq-hash = { workspace = true }
nimiq-hash_derive = { workspace = true }
nimiq-serde = { workspace = true, optional = true }
nimiq-utils = { workspace = true, features = ["key-rng"] }

[dev-dependencies]
nimiq-test-log = { workspace = true }
nimiq-test-utils = { workspace = true }

[features]
cache = ["lazy"]
default = ["lazy", "serde-derive"]
lazy = ["parking_lot"]
serde-derive = ["nimiq-serde", "serde", "serde-big-array"]
