[package]
name = "nimiq-client"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "Nimiq's Rust client"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]
exclude = ["db", "peer_key.dat"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
futures = { package = "futures-util", version = "0.3" }
log = { package = "tracing", version = "0.1", features = ["log"] }
tokio = { version = "1.24", features = ["rt-multi-thread", "time", "tracing"] }
tokio-metrics = "0.1"

[dependencies.nimiq]
package = "nimiq-lib"
path = "../lib"
version = "0.1"
features = [
    "deadlock",
    "dns-tcp",
    "logging",
    "loki",
    "metrics-server",
    "panic",
    "rpc-server",
    "signal-handling",
    "tokio-console",
    "validator",
    "wallet",
    "zkp-prover",
]
