[package]
name = "nimiq-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Nimiq's Rust client"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
exclude = ["db", "peer_key.dat"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
log = { workspace = true }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "tracing"] }
tokio-metrics = "0.3"

nimiq-utils = { workspace = true, features = ["spawn"] }

[dependencies.nimiq]
workspace = true
features = [
    "database-storage",
    "deadlock",
    "full-consensus",
    "logging",
    "loki",
    "metrics-server",
    "panic",
    "rpc-server",
    "signal-handling",
    "tokio-console",
    "tokio-websocket",
    "validator",
    "wallet",
    "zkp-prover",
    "parallel",
]
