[package]
name = "nimiq-collections"
version = "0.1.0"
authors = ["Pascal B <git@paberr.net>", "The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
description = "A set of advanced collections for use in the Nimiq Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
nimiq-test-log = { path = "../test-log" }
nimiq-serde = { path = "../serde" }
rand = "0.8"
