[package]
name = "nimiq-collections"
version.workspace = true
authors = ["Pascal B <git@paberr.net>", "The Nimiq Core Development Team <info@nimiq.com>"]
license.workspace = true
edition.workspace = true
description = "A set of advanced collections for use in the Nimiq Rust implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
serde = "1.0"

nimiq-serde = { workspace = true }

[dev-dependencies]
hex = "0.4"
rand = "0.8"
serde_json = "1.0"

nimiq-test-log = { workspace = true }
