[package]
name = "nimiq-consensus-albatross"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Consensus implementation of Nimiq in Rust"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
futures = "0.3"
log = "0.4"
parking_lot = "0.9"
pin-project = "0.4.8"
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }
weak-table = "0.2"
async-trait = "0.1"
thiserror = "1.0"

beserial = { path = "../beserial", version = "0.1" }
beserial_derive = { path = "../beserial/beserial_derive", version = "0.1" }
nimiq-block-albatross = { path = "../primitives/block-albatross", version = "0.1" }
nimiq-blockchain-albatross = { path = "../blockchain-albatross", version = "0.1", features = ["transaction-store"] }
nimiq-collections = { path = "../collections", version = "0.1" }
nimiq-database = { path = "../database", version = "0.1", features = ["full-nimiq"] }
nimiq-hash = { path = "../hash", version = "0.1" }
nimiq-macros = { path = "../macros", version = "0.1" }
nimiq-mempool = { path = "../mempool", version = "0.1" }
nimiq-messages = { path = "../messages", version = "0.1" }
nimiq-network-interface = { path = "../network-interface", version = "0.1" }
nimiq-genesis = { path = "../genesis", version = "0.1" }
nimiq-primitives = { path = "../primitives", version = "0.1", features = ["policy"] }
nimiq-transaction = { path = "../primitives/transaction", version = "0.1" }
nimiq-subscription = { path = "../primitives/subscription", version = "0.1" }
nimiq-utils = { path = "../utils", version = "0.1", features = ["time", "observer", "timers", "mutable-once", "throttled-queue", "rate-limit", "merkle", "math"] }

[dev-dependencies]
hex = "0.4"
simple_logger = "1.0"

nimiq-bls = { path = "../bls", version = "0.1" }
nimiq-network-mock = { path = "../network-mock", version = "0.1" }
nimiq-block-production-albatross = { path = "../block-production-albatross", version = "0.1", features = ["test-utils"] }
