[package]
name = "nimiq-consensus-albatross"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Consensus implementation of Nimiq in Rust"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
futures = "0.3"
log = "0.4"
parking_lot = "0.9"
pin-project = "0.4.8"
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }
weak-table = "0.2"
async-trait = "0.1"
thiserror = "1.0"

beserial = { path = "../beserial" }
beserial_derive = { path = "../beserial/beserial_derive" }
nimiq-block-albatross = { path = "../primitives/block-albatross" }
nimiq-blockchain-albatross = { path = "../blockchain-albatross" }
nimiq-collections = { path = "../collections" }
nimiq-database = { path = "../database", features = ["full-nimiq"] }
nimiq-hash = { path = "../hash" }
nimiq-macros = { path = "../macros" }
nimiq-mempool = { path = "../mempool" }
nimiq-messages = { path = "../messages" }
nimiq-network-interface = { path = "../network-interface" }
nimiq-genesis = { path = "../genesis" }
nimiq-primitives = { path = "../primitives", features = ["policy"] }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-subscription = { path = "../primitives/subscription" }
nimiq-utils = { path = "../utils", features = ["time", "observer", "timers", "mutable-once", "throttled-queue", "rate-limit", "merkle", "math"] }

[dev-dependencies]
hex = "0.4"
simple_logger = "1.0"

nimiq-bls = { path = "../bls" }
nimiq-network-mock = { path = "../network-mock" }
nimiq-block-production-albatross = { path = "../block-production-albatross", features = ["test-utils"] }
