[package]
name = "nimiq-consensus"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Consensus logic of Nimiq's Albatross implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
parking_lot = { git = "https://github.com/styppo/parking_lot.git" }
pin-project = "1.0"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.14", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

beserial = { path = "../beserial" }
beserial_derive = { path = "../beserial/beserial_derive" }
nimiq-block = { path = "../primitives/block" }
nimiq-blockchain = { path = "../blockchain" }
nimiq-collections = { path = "../collections" }
nimiq-database = { path = "../database" }
nimiq-genesis = { path = "../genesis" }
nimiq-hash = { path = "../hash" }
nimiq-macros = { path = "../macros" }
nimiq-mempool = { path = "../mempool" }
nimiq-network-interface = { path = "../network-interface" }
nimiq-primitives = { path = "../primitives", features = ["policy"] }
nimiq-subscription = { path = "../primitives/subscription" }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-utils = { path = "../utils", features = [
    "time",
    "observer",
    "mutable-once",
    "throttled-queue",
    "rate-limit",
    "merkle",
    "math",
] }

[dev-dependencies]
hex = "0.4"
simple_logger = "1.0"

nimiq-bls = { path = "../bls" }
nimiq-network-mock = { path = "../network-mock" }
nimiq-block-production = { path = "../block-production" }
nimiq-test-utils = { path = "../test-utils" }
