[package]
name = "nimiq-database"
version.workspace = true
authors = [
    "Pascal B <git@paberr.net>",
    "The Nimiq Core Development Team <info@nimiq.com>",
]
license.workspace = true
edition.workspace = true
description = "A LMDB database wrapper with support for volatile storage"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
bitflags = "2.5"
libmdbx = "0.5.0"
log = { workspace = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tempfile = "3"
thiserror = "1.0"

nimiq-primitives = { workspace = true }
nimiq-hash = { workspace = true }
nimiq-transaction = { workspace = true }
nimiq-database-value = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = [
    "flamegraph",
    "frame-pointer",
    "criterion",
] }
rand = "0.8"

nimiq-test-log = { workspace = true }

[[bench]]
name = "hash_keys"
harness = false
