[package]
name = "fixed-unsigned"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@cispa.saarland>"]
edition = "2018"
description = "Fixed precision decimal numbers for Nimiq's Rust implementation"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs"
license = "Apache-2.0"
keywords = ["nimiq"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
num-bigint = "0.2"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.2"
lazy_static = "1.2"
bigdecimal = "0.1.0"

[[bench]]
name = "fixed_unsigned"
harness = false
