[package]
name = "nimiq-fuzz"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Fuzz some `Deserialize` implementations"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
afl = { version = "0.15.10", optional = true }

nimiq-collections = { workspace = true }
nimiq-primitives = { workspace = true, features = ["key-nibbles", "serde-derive", "trie"] }
nimiq-serde = { workspace = true }

[features]
fuzz = ["afl"]
