[package]
name = "nimiq-genesis-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
log = { package = "tracing", version = "0.1" }
serde = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["parsing", "serde"] }
toml = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

nimiq-account = { path = "../primitives/account" }
nimiq-block = { path = "../primitives/block" }
nimiq-bls = { path = "../bls", features = ["serde-derive"] }
nimiq-database = { path = "../database" }
nimiq-hash = { path = "../hash" }
nimiq-serde = { path = "../serde" }
nimiq-keys = { path = "../keys", features = ["serde-derive"] }
nimiq-primitives = { path = "../primitives", features = ["serde-derive", "tree-proof"] }
nimiq-transaction = { path = "../primitives/transaction" }
nimiq-trie = { path = "../primitives/trie" }
nimiq-vrf = { path = "../vrf", features = ["serde-derive"] }
