[package]
name = "nimiq-genesis-builder"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Tools for building a Nimiq genesis"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
hex = "0.4"
log = { package = "tracing", version = "0.1" }
serde = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

nimiq-account = { workspace = true, features = ["accounts", "interaction-traits"] }
nimiq-block = { workspace = true }
nimiq-bls = { workspace = true, features = ["serde-derive"] }
nimiq-database = { workspace = true }
nimiq-hash = { workspace = true }
nimiq-keys = { workspace = true, features = ["serde-derive"] }
nimiq-primitives = { workspace = true, features = ["serde-derive", "tree-proof"] }
nimiq-serde = { workspace = true }
nimiq-transaction = { workspace = true }
nimiq-trie = { workspace = true }
nimiq-vrf = { workspace = true, features = ["serde-derive"] }
